<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_dark_blue"
    tools:context=".register.view.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="?attr/actionBarTheme"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imgBackRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back"
            app:tint="@color/color_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginStart="@dimen/dimen_40dp"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_20sp"
            android:textColor="@color/color_white"/>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rlCardRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarRegister"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_150dp"
        android:background="@drawable/rectangle_shape">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_15dp"
            android:background="@color/color_white"
            android:layout_marginTop="@dimen/dimen_50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:hint="@string/name"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:boxBackgroundColor="@color/color_white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtEmailRegister"
                    app:boxBackgroundColor="@color/color_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:hint="@string/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtNameRegister">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtPasswordRegister"
                    app:boxBackgroundColor="@color/color_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtEmailRegister">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPasswordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/save"
                    android:layout_marginTop="@dimen/dimen_40dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:textColor="@color/color_white"
                    app:layout_constraintTop_toBottomOf="@+id/txtPasswordRegister"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <View
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:background="@drawable/circle_shape"
        android:layout_marginTop="@dimen/dimen_125dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarRegister"
        app:layout_constraintBottom_toTopOf="@+id/rlCardRegister"/>

    <ImageView
        android:id="@+id/imgRegister"
        android:layout_width="@dimen/dimen_60dp"
        android:layout_height="@dimen/dimen_60dp"
        android:src="@drawable/add_user_photo"
        android:scaleType="fitXY"
        android:contentDescription="@string/register_image"
        android:layout_marginTop="@dimen/dimen_125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarRegister"
        app:layout_constraintBottom_toTopOf="@+id/rlCardRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>