<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dark_blue"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rectangle_shape"
        android:layout_marginHorizontal="@dimen/dimen_20dp">

        <TextView
            android:id="@+id/txtLoginWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/welcome_to_the_marvel_hq_s"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_28sp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginHorizontal="@dimen/dimen_5dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtLoginWelcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:cardCornerRadius="@dimen/dimen_15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_48dp"
                    android:hint="@string/email"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:layout_marginVertical="@dimen/dimen_20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:boxBackgroundColor="@color/color_white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:hint="@string/password"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:layout_marginVertical="@dimen/dimen_20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtEmailLogin"
                    app:boxBackgroundColor="@color/color_white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/ckRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txtPasswordLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/remember"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/log_in"
                    android:textColor="@color/color_white"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:layout_marginVertical="@dimen/dimen_20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ckRemember"/>

                <TextView
                    android:id="@+id/txtCreateAccountLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:textColor="@color/color_black"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>